--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("/api/placeholder/1200/600") center/cover no-repeat;
+  background: url("/images/herobasque.png") center/cover no-repeat;
   opacity: 0.3;
   z-index: 1;
   pointer-events: none;
